# nfo

./: .bumpversion.cfg  .env.example  .gitignore  CHANGELOG.md  DOCKER_TEST_RESULTS.md  README.md  TODO.md  docker-compose.yml  goal.yaml  project.functions.toon  project.sh  project.toon  pyproject.toml
demo/: README.md
docs/: README.md  function-reference.md  project-analysis.md
examples/: .env.example  async_usage.py  auto_log_usage.py  bash_client.sh  configure_usage.py  docker-compose-service.yml  env_config_usage.py  env_tagger_usage.py  http_service.py  rust_client.rs
examples/kubernetes/: nfo-deployment.yaml  readme.md
nfo/: __init__.py  __main__.py  auto.py  configure.py  decorators.py  env.py  json_sink.py  llm.py  logged.py  logger.py  models.py  pipeline_sink.py  prometheus.py  redact.py  webhook.py
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt
tests/: test_auto.py  test_binary_router.py  test_buffered_sink.py  test_click_integration.py  test_configure.py  test_decision_log.py  test_decorators.py  test_env.py  test_extractors.py  test_json_sink.py  test_llm.py  test_meta.py  test_meta_decorators.py  test_pipeline_sink.py  test_prometheus.py  test_ring_buffer_sink.py  test_sinks.py  test_webhook.py
tests/docker/: Dockerfile  test_docs.py
