[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfo"
version = "0.2.17"
description = "Automatic function logging system with decorators, supporting multiple output sinks (SQLite, CSV, Markdown, Prometheus) and LLM-powered analysis for DevOps observability."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["logging", "decorator", "sqlite", "csv", "markdown", "auto-logging", "llm", "litellm", "prometheus", "grafana", "webhook", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.0",
]
prometheus = [
    "prometheus_client>=0.20.0",
]
cli = [
    "click>=8.0",
]
rich = [
    "rich>=13.0",
]
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "prometheus_client>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "prometheus_client>=0.20.0",
]
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
]
all = [
    "litellm>=1.0",
    "prometheus_client>=0.20.0",
    "grpcio>=1.60.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
nfo = "nfo.__main__:main"

[tool.setuptools.packages.find]
include = ["nfo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
